--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "konva": "^9.3.22",
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-konva": "^18.2.14"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
