--- a/backend/qr-service/src/main/resources/application.properties
+++ b/backend/qr-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 @ -1,12 +0,0 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bookfair_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Nipuni00@@
+spring.datasource.password=sanduni
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.mail.host=smtp.example.com
