--- a/backend/reservation-service/pom.xml
+++ b/backend/reservation-service/pom.xml
@@ -1,105 +1,117 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
-  <!-- This parent defines all Spring Boot dependency versions -->
+  <!-- Parent POM -->
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.4</version>
-    <relativePath/> <!-- Look up parent from the repository -->
+    <groupId>com.example.bookfair</groupId>
+    <artifactId>backend</artifactId> <!-- matches parent POM artifactId -->
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>com.example</groupId>
-  <artifactId>bookfair</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>reservation-service</artifactId>
   <packaging>jar</packaging>
-  <name>bookfair</name>
-  <description>Colombo International Book Fair - Reservation Management System</description>
 
   <properties>
     <java.version>17</java.version>
+    <spring.boot.version>3.1.4</spring.boot.version>
+    <lombok.version>1.18.30</lombok.version>
+    <jackson.version>2.15.2</jackson.version>
+    <mysql.connector.version>8.0.33</mysql.connector.version>
   </properties>
 
   <dependencies>
-    <!-- Core Spring Boot dependencies -->
+    <!-- Spring Boot Starters -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <version>${spring.boot.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>${spring.boot.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
+      <version>${spring.boot.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-mail</artifactId>
+      <version>${spring.boot.version}</version>
     </dependency>
 
-    <!-- JSON -->
+    <!-- Internal modules (no version needed) -->
+    <dependency>
+      <groupId>com.example.bookfair</groupId>
+      <artifactId>user-auth-service</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.example.bookfair</groupId>
+      <artifactId>stall-service</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.example.bookfair</groupId>
+      <artifactId>map-service</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
+    <!-- Other dependencies -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
-
-    <!-- MySQL connector -->
     <dependency>
-      <groupId>com.mysql</groupId>
+      <groupId>mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
+      <version>${mysql.connector.version}</version>
     </dependency>
-
-    <!-- QR Code generation -->
     <dependency>
       <groupId>com.google.zxing</groupId>
       <artifactId>core</artifactId>
       <version>3.5.0</version>
     </dependency>
-
     <dependency>
       <groupId>com.google.zxing</groupId>
       <artifactId>javase</artifactId>
       <version>3.5.0</version>
     </dependency>
-
-    <!-- JWT authentication -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
     </dependency>
 
-    <!--Testing -->
+    <!-- Testing -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <version>${spring.boot.version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.30</version>
+      <version>${lombok.version}</version>
       <scope>provided</scope>
     </dependency>
-
   </dependencies>
 
   <build>
     <plugins>
-      <!-- Spring Boot plugin for packaging -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring.boot.version}</version>
       </plugin>
     </plugins>
   </build>
