--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -22,3 +22,8 @@ management.endpoint.health.show-details=always
 logging.level.org.springframework.cloud.gateway=INFO
 logging.level.com.example.bookfair=DEBUG
 
+# Gateway Configuration
+# Ensure sensitive headers like Authorization are not filtered
+spring.cloud.gateway.filter.remove-request-header=Host
+spring.cloud.gateway.filter.remove-response-header=Content-Length
+
