--- a/backend/user-service/src/main/resources/application.properties
+++ b/backend/user-service/src/main/resources/application.properties
@@ -28,6 +28,10 @@ jwt.secret=${JWT_SECRET:ChangeThisSecretKeyForProdUseStrongSecretKeyInProduction
 jwt.expiration=${JWT_EXPIRATION:86400000}
 server.port=8081
 
+# Email Service URL (microservice)
+# Can be overridden by environment variable: EMAIL_SERVICE_URL
+email.service.url=${EMAIL_SERVICE_URL:http://localhost:8083}
+
 # CORS Configuration
 # Can be overridden by environment variable: CORS_ALLOWED_ORIGINS
 # For multiple origins, use comma-separated values: http://localhost:3000,http://localhost:3001
