fix the email sending issue

--- a/backend/email-service/src/main/resources/application.properties
+++ b/backend/email-service/src/main/resources/application.properties
@@ -12,6 +12,7 @@
 # For other providers: Check their SMTP settings
 # These values can be overridden by environment variables:
 # SPRING_MAIL_HOST, SPRING_MAIL_PORT, SPRING_MAIL_USERNAME, SPRING_MAIL_PASSWORD
+spring.config.import=optional:file:.env[.properties]
 spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
 spring.mail.port=${SPRING_MAIL_PORT:587}
 spring.mail.username=${SPRING_MAIL_USERNAME:your_email@gmail.com}
